[tool.poetry]
name = "httpbin"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<4"
gunicorn = "^23.0.0"
decorator = "^5.2.1"
flask = "<3"
werkzeug = "<3"
pyyaml = "^6.0.2"
flasgger = "^0.9.5"
six = "^1.16.0"
brotli = "^1.0.9"
gevent = "^24.11.1"


[tool.poetry.group.dev.dependencies]
rope = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
